--- a/src/main/resources/templates/blogadmin.html
+++ b/src/main/resources/templates/blogadmin.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="index3.html" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="#" class="nav-link">Contact</a>
@@ -54,7 +54,7 @@
         <ul class="navbar-nav ml-auto">
             <!-- Messages Dropdown Menu -->
             <li>
-                <a href="pages/widgets.html" class="nav-link c-nav-link">
+                <a href="blogpublish.html" class="nav-link c-nav-link">
                     <i class="nav-icon fas fa-upload"></i>&nbsp;&nbsp;
                     <p>发布</p>
                 </a>
@@ -82,7 +82,7 @@
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="index.html" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 首页
@@ -91,7 +91,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link active">
+                        <a href="#" class="nav-link active">
                             <i class="nav-icon fas fa-folder"></i>
                             <p>
                                 博客管理
@@ -100,7 +100,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="types.html" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 分类管理
@@ -109,7 +109,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="tags.html" class="nav-link">
                             <i class="nav-icon fas fa-tags"></i>
                             <p>
                                 标签管理
@@ -118,7 +118,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="user.html" class="nav-link">
                             <i class="nav-icon fas fa-user"></i>
                             <p>
                                 用户管理
