--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,24 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../static/plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Tempusdominus Bbootstrap 4 -->
-    <link rel="stylesheet" href="../static/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-    <!-- iCheck -->
-    <link rel="stylesheet" href="../static/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-    <!-- JQVMap -->
-    <link rel="stylesheet" href="../static/plugins/jqvmap/jqvmap.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="../static/css/adminlte.min.css">
     <!-- custom style -->
     <link rel="stylesheet" href="../static/css/custom.css">
-    <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="../static/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="../static/plugins/daterangepicker/daterangepicker.css">
-    <!-- summernote -->
-    <link rel="stylesheet" href="../static/plugins/summernote/summernote-bs4.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="../static/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="../static/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../static/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -63,7 +54,7 @@
         <ul class="navbar-nav ml-auto">
             <!-- Messages Dropdown Menu -->
             <li>
-                <a href="pages/widgets.html" class="nav-link c-nav-link">
+                <a href="blogpublish.html" class="nav-link c-nav-link">
                     <i class="nav-icon fas fa-upload"></i>&nbsp;&nbsp;
                     <p>发布</p>
                 </a>
@@ -91,7 +82,7 @@
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="index.html" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 首页
@@ -100,7 +91,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="blogadmin.html" class="nav-link">
                             <i class="nav-icon fas fa-folder"></i>
                             <p>
                                 博客管理
@@ -109,7 +100,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="types.html" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 分类管理
@@ -118,7 +109,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link">
+                        <a href="tags.html" class="nav-link">
                             <i class="nav-icon fas fa-tags"></i>
                             <p>
                                 标签管理
@@ -127,7 +118,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="pages/widgets.html" class="nav-link active">
+                        <a href="#" class="nav-link active">
                             <i class="nav-icon fas fa-user"></i>
                             <p>
                                 用户管理
@@ -162,15 +153,208 @@
         <!-- /.content-header -->
 
         <!-- Main content -->
-
-
-
-
-        
-
-
-
-
+        <section class="content">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title">用户列表</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body">
+                            <table id="example1" class="table table-bordered table-striped c-table-center-text">
+                                <thead>
+                                <tr>
+                                    <th>id</th>
+                                    <th>姓名</th>
+                                    <th>注册时间</th>
+                                    <th>最近登录</th>
+                                    <th>邮箱</th>
+                                    <th>操作</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>0001</td>
+                                    <td>李兰星</td>
+                                    <td>2020-3-18</td>
+                                    <td>2020-3-18</td>
+                                    <td>2868714995@qq.com</td>
+                                    <td>
+                                        <button type="button" class="btn btn-block btn-outline-primary btn-sm c-left-button">
+                                            <i class="nav-icon fas fa-search"></i>
+                                            查看
+                                        </button>
+                                        <button type="button" class="btn btn-block btn-outline-danger btn-sm c-right-button">
+                                            <i class="nav-icon fas fa-edit"></i>
+                                            编辑
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.card-body -->
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
@@ -192,37 +376,26 @@
 
 <!-- jQuery -->
 <script src="../static/plugins/jquery/jquery.min.js"></script>
-<!-- jQuery UI 1.11.4 -->
-<script src="../static/plugins/jquery-ui/jquery-ui.min.js"></script>
-<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-<script>
-    $.widget.bridge('uibutton', $.ui.button)
-</script>
 <!-- Bootstrap 4 -->
 <script src="../static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- ChartJS -->
-<script src="../static/plugins/chart.js/Chart.min.js"></script>
-<!-- Sparkline -->
-<script src="../static/plugins/sparklines/sparkline.js"></script>
-<!-- JQVMap -->
-<script src="../static/plugins/jqvmap/jquery.vmap.min.js"></script>
-<script src="../static/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-<!-- jQuery Knob Chart -->
-<script src="../static/plugins/jquery-knob/jquery.knob.min.js"></script>
-<!-- daterangepicker -->
-<script src="../static/plugins/moment/moment.min.js"></script>
-<script src="../static/plugins/daterangepicker/daterangepicker.js"></script>
-<!-- Tempusdominus Bootstrap 4 -->
-<script src="../static/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-<!-- Summernote -->
-<script src="../static/plugins/summernote/summernote-bs4.min.js"></script>
-<!-- overlayScrollbars -->
-<script src="../static/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<!-- DataTables -->
+<script src="../static/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="../static/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="../static/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="../static/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.js"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="dist/js/pages/dashboard.js"></script>
+<script src="../../dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+<script src="../../dist/js/demo.js"></script>
+<!-- page script -->
+<script>
+    $(function () {
+        $("#example1").DataTable({
+            "responsive": true,
+            "autoWidth": false,
+            "ordering": false
+        });
+    });
+</script>
 </body>
 </html>
